--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -867,7 +867,7 @@ $grid-width: 114rem;
   position: relative;
   -webkit-box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
           box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  background-color: #f7f7f7;
+  background-color: #343434;
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -3266,15 +3266,16 @@ a:hover {
   
   .h-pagi-top-no {
   /* color: hsla(0, 0%, 73%, 0.6); */
-  color: rgb(24, 24, 41);
+  /* color: rgb(24, 24, 41); */
   /* color: orangered; */
+  color: #e8e8e8;
   opacity: 1;
 }
   
   #h-pagi-bottom-marker {
   -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
-  color: #181829;
+  color: #e8e8e8;
 }
   
   #h-pagi-bottom {
@@ -4291,7 +4292,8 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #3d3560;
+  /* background: #3d3560; */
+  background: #e8e8e8;
   -webkit-transform: translate3d(-110%, 0, 0);
           transform: translate3d(-110%, 0, 0);
 }
@@ -4305,7 +4307,7 @@ a:hover {
   line-height: 120%;
   letter-spacing: -1px;
   font-size: calc(1.1rem + 4.24vw);
-  color: #3d3560;
+  color: #e8e8e8;
   
 }
   
@@ -4330,7 +4332,8 @@ a:hover {
   .h-txt-desc-txt {
   /* position: absolute; */
   line-height: 180%;
-  color: #a3adb9;
+  /* color: #a3adb9; */
+  color: #e8e8e8;
   font-size: calc(0.4rem + 0.718vw);
   -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
@@ -4341,7 +4344,8 @@ a:hover {
   
   .h-bottom-title {
   font-family: trump-gothic-pro;
-  color: #181829;
+  /* color: #181829; */
+  color: #e8e8e8;
   letter-spacing: 1.6px;
   font-size: calc(0.4rem + 0.5vw);
   -webkit-transform: translate3d(0, 100%, 0);
