adjust opacity of background image wrapper and refactor titleInit

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4552,6 +4552,7 @@ a:hover {
           justify-content: center;
   background-size: cover;
   background-position: 50%;
+  opacity: .2;
 }
   
   .h-img {
