--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -3417,6 +3417,7 @@ svg:not(:root) {
   justify-content: center;
   background-size: cover;
   background-position: 50%;
+  opacity: .2;
 }
 
 .h-img {
