--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -98,7 +98,7 @@
     margin: 40px;
     padding: 10px;
     float: left;
-    background: rgba(41, 152, 255, .5);
+    background: rgba(52,52,52,.3);
     border-radius: 6px;
     opacity: 1;
     border-bottom: 2px solid #8d8d8d;
@@ -112,8 +112,8 @@
     height: 92vh;
     background-image: linear-gradient(
         to right bottom,
-        rgba(41, 152, 255, 1),
-        rgba(255,255,255, 1));
+        rgba(52,52,52, 1),
+        rgba(52,52,52, 1));
     background-size: cover;
     background-position: top;
     position: relative;
