--- a/src/static/style/css/app/lib/_fonts.css
+++ b/src/static/style/css/app/lib/_fonts.css
@@ -38,7 +38,7 @@
   .tagline {
     color: #fff;
     text-align: center;
-    font-family: "FuturaStd-Book", sans-serif;
+    font-family: "GinesoBold", sans-serif;
     text-transform: uppercase;
     //padding-top: 10em;
     //padding-bottom: 11em;
@@ -66,8 +66,8 @@
     font-size: 9em;
     line-height: 1em;
     font-weight: 100;
-    letter-spacing: 0.42rem;
-    font-family: "FuturaStd-ExtraBold", sans-serif;
+    letter-spacing: 2rem;
+    font-family: "GinesoBold", sans-serif;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
   
     @include respond(phone) {
