--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -30,10 +30,10 @@
 .page-content {
     position: relative;
     height: 100%;
-    min-height: 90vh;
+    min-height: 100vh;
     background-image: linear-gradient(
       to right bottom,
-      rgba(41, 152, 255, 0.3),
+      rgba(52,52,52, 0.3),
       rgba(255, 255, 255, 0.3)
     );
     background-size: cover;
@@ -109,7 +109,7 @@
   }
 
   .header {
-    height: 92vh;
+    height: 100vh;
     background-image: linear-gradient(
         to right bottom,
         rgba(52,52,52, 1),
@@ -125,7 +125,7 @@
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        height: 92vh;
+        height: 100vh;
     }
   
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
