--- a/src/static/style/css/app/common/_sail.css
+++ b/src/static/style/css/app/common/_sail.css
@@ -11,15 +11,54 @@
     opacity: 1;
 }
 
-.layer-mask, .loader-mask {
+.loader-mask-0 {
     z-index: 1000;
     width: 25vw;
-    height: 0;
+    height: 100vh;
     position: absolute;
-    left: 0;
-    bottom: 0;
+    left: 0%;
+    /* bottom: 0; */
     background: rgba(52,52,52,1);
-    transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1);
-    transform: translate3d(0,100%,0);
+    /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
+    transform: translate3d(0,0%,0);
+    opacity: 1;
+}
+
+.loader-mask-1 {
+    z-index: 1000;
+    width: 25vw;
+    height: 100vh;
+    position: absolute;
+    left: 25%;
+    /* bottom: 0; */
+    background: rgba(52,52,52,1);
+    /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
+    transform: translate3d(0,-25%,0);
+    opacity: 1;
+}
+
+.loader-mask-2 {
+    z-index: 1000;
+    width: 25vw;
+    height: 100vh;
+    position: absolute;
+    left: 50%;
+    /* bottom: 0; */
+    background: rgba(52,52,52,1);
+    /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
+    transform: translate3d(0,-50%,0);
+    opacity: 1;
+}
+
+.loader-mask-3 {
+    z-index: 1000;
+    width: 25vw;
+    height: 100vh;
+    position: absolute;
+    left: 75%;
+    /* bottom: 0; */
+    background: rgba(52,52,52,1);
+    /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
+    transform: translate3d(0,-75%,0);
     opacity: 1;
 }
