--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -6,7 +6,7 @@ html {
 
 .container {
   /* padding: 3rem; */
-  background: #fff;
+  /* background: #fff; */
   position: relative;
   z-index: 1;
   pointer-events: auto;
