--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -845,17 +845,18 @@ $grid-width: 114rem;
     opacity: 0;
   }
   
-  /* transform: scale(1);
-    transition: 1800ms transform cubic-bezier(.28,0,.07,1); */
+  /* transition: 1800ms transform cubic-bezier(.28,0,.07,1); */
   
-  @supports ((-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0))) or (-webkit-clip-path: polygon(0 0)) {
+  .header */
+    
   
-  .header {
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        height: 100vh
-  }
+        height: 100vh;
     }
+  
+  /* transform: scale(1.3); */
   
   #tagline-wrap {
     position: absolute;
