--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -159,14 +159,14 @@ $grid-width: 114rem;
   
   #sail {
     position: fixed;
-    z-index: 9000;
+    z-index: 1000;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(52,52,52,1);
-    -webkit-transform: translate3d(0,-100%,0);
-            transform: translate3d(0,-100%,0);
+    background: rgba(72,72,72,1);
+    -webkit-transform: translate3d(0,0%,0);
+            transform: translate3d(0,0%,0);
     opacity: 1;
 }
   
@@ -177,10 +177,10 @@ $grid-width: 114rem;
     position: absolute;
     left: 0%;
     /* bottom: 0; */
-    background: rgba(52,52,52,1);
+    background: rgba(72,72,72,1);
     /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
-    -webkit-transform: translate3d(0,-100%,0);
-            transform: translate3d(0,-100%,0);
+    -webkit-transform: translate3d(0,0%,0);
+            transform: translate3d(0,0%,0);
     opacity: 1;
 }
   
@@ -191,10 +191,10 @@ $grid-width: 114rem;
     position: absolute;
     left: 25%;
     /* bottom: 0; */
-    background: rgba(52,52,52,1);
+    background: rgba(72,72,72,1);
     /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
-    -webkit-transform: translate3d(0,-50%,0);
-            transform: translate3d(0,-50%,0);
+    -webkit-transform: translate3d(0,0%,0);
+            transform: translate3d(0,0%,0);
     opacity: 1;
 }
   
@@ -205,7 +205,7 @@ $grid-width: 114rem;
     position: absolute;
     left: 50%;
     /* bottom: 0; */
-    background: rgba(52,52,52,1);
+    background: rgba(72,72,72,1);
     /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
     -webkit-transform: translate3d(0,0%,0);
             transform: translate3d(0,0%,0);
@@ -219,7 +219,7 @@ $grid-width: 114rem;
     position: absolute;
     left: 75%;
     /* bottom: 0; */
-    background: rgba(52,52,52,1);
+    background: rgba(72,72,72,1);
     /* transition: height .6s cubic-bezier(.28,0,.07,1), bottom .6s cubic-bezier(.28,0,.07,1); */
     -webkit-transform: translate3d(0,0%,0);
             transform: translate3d(0,0%,0);
@@ -843,20 +843,22 @@ $grid-width: 114rem;
     -webkit-transform: translate3d(0, 0%, 0);
             transform: translate3d(0, 0%, 0); 
     opacity: 0;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-transition: 1800ms -webkit-transform cubic-bezier(.28,0,.07,1);
+    transition: 1800ms -webkit-transform cubic-bezier(.28,0,.07,1);
+    transition: 1800ms transform cubic-bezier(.28,0,.07,1);
+    transition: 1800ms transform cubic-bezier(.28,0,.07,1), 1800ms -webkit-transform cubic-bezier(.28,0,.07,1);
   }
   
-  /* transition: 1800ms transform cubic-bezier(.28,0,.07,1); */
+  @supports ((-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0))) or (-webkit-clip-path: polygon(0 0)) {
   
-  .header */
-    
-  
-    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+  .header {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        height: 100vh;
+        height: 100vh
+  }
     }
-  
-  /* transform: scale(1.3); */
   
   #tagline-wrap {
     position: absolute;
