add scroll icon bounce animation, pt.I

--- a/src/static/style/css/app/lib/_animations.css
+++ b/src/static/style/css/app/lib/_animations.css
@@ -1,5 +1,39 @@
 /* Animations */
 
+@-webkit-keyframes bounce {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0)
+    }
+
+    50% {
+        -webkit-transform: translateY(2px);
+        transform: translateY(2px)
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0)
+    }
+}
+
+@keyframes bounce {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0)
+    }
+
+    50% {
+        -webkit-transform: translateY(2px);
+        transform: translateY(2px)
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0)
+    }
+}
+
 @-webkit-keyframes cascade {
     0% {
         -webkit-transform: 
