initial clothbg integration commit

--- a/src/static/style/css/main.css
+++ b/src/static/style/css/main.css
@@ -5,6 +5,7 @@
 @import './app/common/_sail.css';
 
 @import './app/lib/_easing.css';
+@import './app/lib/_demo3.css';
 @import './app/lib/_fonts.css';
 @import './app/lib/_animations.css';
 @import './app/lib/_loading-animation.css';
