--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -38,6 +38,36 @@
     );
     background-size: cover;
     background-position: top;
+
+    height: 100vh;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba(52,52,52, 1),
+        rgba(52,52,52, 1));
+    background-size: cover;
+    background-position: top;
+    position: relative;
+    z-index: 20;
+    transform: translate3d(0, 0%, 0); 
+    opacity: 0;
+    transform: scale(1.1);
+    transition: 1800ms transform cubic-bezier(.28,0,.07,1);
+    
+  
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        height: 100vh;
+    }
+  
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+            only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+            only screen and (min-width: 125em) {
+        background-image: linear-gradient(
+            to right bottom,
+            rgba(52,52,52, 1),
+            rgba(52,52,52, 1));
+    }
   }
   .header-container {
     position: relative;
@@ -109,35 +139,12 @@
   }
 
   .header {
+
+    /* z-index: 30; */
+	  width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba(52,52,52, 1),
-        rgba(52,52,52, 1));
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    z-index: 20;
-    transform: translate3d(0, 0%, 0); 
-    opacity: 0;
-    transform: scale(1.1);
-    transition: 1800ms transform cubic-bezier(.28,0,.07,1);
-    
-  
-    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        height: 100vh;
-    }
-  
-    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-            only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-            only screen and (min-width: 125em) {
-        background-image: linear-gradient(
-            to right bottom,
-            rgba(52,52,52, 1),
-            rgba(52,52,52, 1));
-    }
+    background: -webkit-canvas(c) no-repeat 50% 50%;
+
   }
   
   #tagline-wrap {
