--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -140,10 +140,10 @@
 
   .header {
 
-    /* z-index: 30; */
+    z-index: 30;
 	  width: 100vw;
     height: 100vh;
-    background: -webkit-canvas(c) no-repeat 50% 50%;
+    /* background: url('../../../../static/media/img/bck-noise.jpg'); */
 
   }
   
