--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -28,15 +28,25 @@
     opacity: 0.7;
 }
 
-canvas {
+/* canvas {
   width: 100vw;
   height: 100vh;
-  background: url('../../../../../static/media/img/bck-noise.jpg')
+
+} */
+
+.header {
+
+  z-index: 30;
+  width: 100vw;
+  height: 100vh;
+  background: url('../../../../static/media/img/bck-noise.jpg');
 
 }
 
-#scene {
-	z-index: 30;
+#glcanvas {
+  z-index: 30;
+  width: 100vw;
+  height: 100vh;
 
 }
 
@@ -151,14 +161,6 @@ canvas {
     -moz-osx-font-smoothing: grayscale;
   }
 
-  .header {
-
-    z-index: 30;
-	  width: 100vw;
-    height: 100vh;
-    /* background: url('../../../../static/media/img/bck-noise.jpg'); */
-
-  }
   
   #tagline-wrap {
     position: absolute;
