--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -757,13 +757,13 @@ $grid-width: 114rem;
     bottom: 0;
     left: 0;
     text-rendering: optimizeLegibility;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 95vh; */
 }
   
-  #glcanvas {
-  /* width: 100vw;
-  height: 100vh; */
+  canvas {
+  width: 100vw;
+  height: 100vh;
     /* background: url('../../../../static/media/img/bck-noise.jpg') repeat 0 0; */
 
 }
@@ -916,7 +916,7 @@ $grid-width: 114rem;
   
   .scroll-icon {
     position: absolute;
-    top: 83%;
+    top: 95%;
     left: 50%;
     opacity: 0;
     z-index: 7000;
