--- a/src/static/style/css/app/page/_home.css
+++ b/src/static/style/css/app/page/_home.css
@@ -67,13 +67,13 @@ a {
 .glcanvas-wrap {
     position: absolute 0;
     text-rendering: optimizeLegibility;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 95vh; */
 }
 
-#glcanvas {
-  /* width: 100vw;
-  height: 100vh; */
+canvas {
+  width: 100vw;
+  height: 100vh;
     /* background: url('../../../../static/media/img/bck-noise.jpg') repeat 0 0; */
 
 }
@@ -221,7 +221,7 @@ a {
 
   .scroll-icon {
     position: absolute;
-    top: 83%;
+    top: 95%;
     left: 50%;
     opacity: 0;
     z-index: 7000;
