--- a/src/static/style/css/app/lib/_loading-animation.css
+++ b/src/static/style/css/app/lib/_loading-animation.css
@@ -1,3 +1,24 @@
+
+.spinner {
+  background: url('../../../../../static/media/img/rainbow.gif') 100%;
+  height: 2px;
+}
+
+.nanobar {
+  width: 100%;
+  height: 3px;
+  z-index: 9999;
+  top:0
+}
+
+.bar {
+  width: 0;
+  height: 100%;
+  transition: height .3s;
+  background:#484848;
+}
+
+/*
 .spinner {
     width: 6rem;
     height: 6rem;
@@ -79,4 +100,6 @@
     border: 2px dashed $color-tertiary-light;
     width: 2.3em;
     height: 2.3em;
-  }
+  } 
+
+ */
