--- a/src/static/style/css/app/lib/_loading-animation.css
+++ b/src/static/style/css/app/lib/_loading-animation.css
@@ -1,12 +1,16 @@
 
 .spinner {
-  background: url('../../../../../static/media/img/rainbow.gif') 100%;
+  /* background: url('../../../../../static/media/img/rainbow.gif') 100%; */
   height: 2px;
+  transform: rotate(-90deg);
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .nanobar {
   width: 100%;
-  height: 3px;
+  height: 5px;
   z-index: 9999;
   top:0
 }
@@ -15,7 +19,17 @@
   width: 0;
   height: 100%;
   transition: height .3s;
-  background:#484848;
+  /* background:#484848; */
+  color: #ff1f44;
+  background: -webkit-linear-gradient(
+    0deg,
+    #ff3000,
+    #ed0200,
+    #ff096c,
+    #d50082
+  );
+  /* -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 /*
