--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -1922,7 +1922,7 @@ svg:not(:root) {
   transform: translate3d(-100%, 0, 0);
 }
 
-#loader {
+/* #loader {
   position: fixed;
   z-index: 9000;
   display: -ms-flexbox;
@@ -1958,7 +1958,7 @@ svg:not(:root) {
 
 .loader-letters {
   opacity: 0;
-}
+} */
 
 #mobile {
   position: fixed;
