--- a/src/static/style/css/app/lib/_loading-animation.css
+++ b/src/static/style/css/app/lib/_loading-animation.css
@@ -1,14 +1,30 @@
-
-.spinner {
-  /* background: url('../../../../../static/media/img/rainbow.gif') 100%; */
-  height: 2px;
-  transform: rotate(-90deg);
+#loader-line-wrap {
   position: absolute;
+  top: 0;
   bottom: 0;
-  left: 0;
+  left: 50%;
+  width: 10px;
+  z-index: 5000;
 }
 
-.nanobar {
+.loader-line {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: -webkit-linear-gradient(
+    -90deg,
+    #ff3000,
+    #ed0200,
+    #ff096c,
+    #d50082
+  );
+  opacity: 1;
+  transform: translate3d(0, 100%, 0);
+}
+
+/* .nanobar {
   width: 100%;
   height: 5px;
   z-index: 9999;
@@ -29,7 +45,7 @@
     #d50082
   );
   /* -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  -webkit-text-fill-color: transparent; */ */
 }
 
 /*
